--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://be-creative-backend.herokuapp.com
+REACT_APP_API_URL=https://be-creative-backend-a3147a3a7132.herokuapp.com
