--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,23 @@
-# Python virtual environment
-/backend/venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Python cache
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Environment variables
-.env
+# testing
+/coverage
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# production
+/build
 
-# OS
+# misc
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Application specific
-/backend/data/*
-!/backend/data/.gitkeep
-
-# Keep frontend's own gitignore
-!/frontend/.gitignore
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
