--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,8 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
 openai==1.3.5
-python-dateutil==2.8.2
-Pillow>=10.0.0
-boto3==1.29.3
+pillow==11.0.0
 requests==2.31.0
+pydantic==2.10.1
+boto3==1.29.3
 python-multipart==0.0.6
