--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
